--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,3 +31,7 @@ version = "0.3.4"
 [dependencies.glib]
 git = "https://github.com/gtk-rs/glib"
 version = "0.1.3"
+
+[dependencies.gobject-sys]
+git = "https://github.com/gtk-rs/sys"
+version = "0.3.4"
