--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,10 @@ version = "0.3.4"
 git = "https://github.com/gtk-rs/glib"
 version = "0.1.3"
 
+[dependencies.glib-sys]
+git = "https://github.com/gtk-rs/sys"
+version = "0.3.4"
+
 [dependencies.gobject-sys]
 git = "https://github.com/gtk-rs/sys"
 version = "0.3.4"
