--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,8 @@ png = ["cairo-sys-rs/png"]
 xcb = ["cairo-sys-rs/xcb"]
 purge-lgpl-docs = ["gtk-rs-lgpl-docs"]
 v1_12 = ["cairo-sys-rs/v1_12"]
-default = ["glib"]
+use_glib = ["glib", "glib-sys"]
+default = ["use_glib"]
 
 [build-dependencies.gtk-rs-lgpl-docs]
 git = "https://github.com/gtk-rs/lgpl-docs"
@@ -35,6 +36,11 @@ version = "0.3.4"
 [dependencies.glib]
 git = "https://github.com/gtk-rs/glib"
 version = "0.1.3"
+optional = true
+
+[dependencies.glib-sys]
+git = "https://github.com/gtk-rs/sys"
+version = "0.3.4"
 optional = true
 
 [dependencies]
