--- a/Gir.toml
+++ b/Gir.toml
@@ -99,6 +99,10 @@ status = "generate"
     #manual pathbuf
     ignore = true
     [[object.function]]
+    name = "filename_from_utf8"
+    #not in 64bit lib for Windows
+    ignore = true
+    [[object.function]]
     name = "get_user_name"
     #manual pathbuf is_windows_utf8
     ignore = true
@@ -228,6 +232,14 @@ status = "generate"
        [[object.function]]
        name = "load_from_data"
        #gsize
+       ignore = true
+       [[object.function]]
+       name = "set_double_list"
+       #wrong array type
+       ignore = true
+       [[object.function]]
+       name = "set_integer_list"
+       #wrong array type
        ignore = true
 
 [[object]]
