--- a/.travis.yml
+++ b/.travis.yml
@@ -12,9 +12,9 @@ addons:
     - libgtk-3-dev
 script:
   - rustc --version
-  - cargo test --features embed-lgpl-docs
+  - cargo test --features embed-lgpl-docs --jobs 1
   # catch any sneaked in lgpl docs
-  - cargo build --features purge-lgpl-docs
+  - cargo build --features purge-lgpl-docs --jobs 1
   - git diff -R --exit-code
   - mkdir .cargo
   - echo 'paths = ["."]' > .cargo/config
