--- a/.travis.yml
+++ b/.travis.yml
@@ -13,9 +13,9 @@ addons:
 script:
   - rustc --version
   - ./check_init_asserts
-  - cargo test --features embed-lgpl-docs
+  - cargo test --features embed-lgpl-docs --jobs 1
   # catch any sneaked in lgpl docs
-  - cargo build --features purge-lgpl-docs
+  - cargo build --features purge-lgpl-docs --jobs 1
   - git diff -R --exit-code
   - mkdir .cargo
   - echo 'paths = ["."]' > .cargo/config
