--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "cairo-rs"
 version = "0.1.3"
 authors = ["The Gtk-rs Project Developers"]
 build = "build.rs"
+readme = "README.md"
 
 description = "Rust bindings for the Cairo library"
 repository = "https://github.com/gtk-rs/cairo"
