gdk-pixbuf: Add README for crates.io

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "gdk-pixbuf"
 version = "0.1.3"
 authors = ["The Gtk-rs Project Developers"]
 build = "build.rs"
+readme = "README.md"
 
 description = "Rust bindings for the GdkPixbuf library"
 repository = "https://github.com/gtk-rs/gdk-pixbuf"
