--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "pango"
 version = "0.1.3"
 authors = ["The Gtk-rs Project Developers"]
+readme = "README.md"
 
 description = "Rust bindings for the Pango library"
 repository = "https://github.com/gtk-rs/pango"
