--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,9 @@ authors = ["The Gtk-rs Project Developers"]
 [dependencies.glib]
 git = "https://github.com/gtk-rs/glib"
 
+[dependencies.gio]
+git = "https://github.com/gtk-rs/gio"
+
 [dependencies.cairo-rs]
 git = "https://github.com/gtk-rs/cairo"
 features = ["png"]
