glib: Add dox feature

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,3 +36,4 @@ v2_48 = ["v2_46", "glib-sys/v2_48"]
 v2_50 = ["v2_48", "glib-sys/v2_50"]
 v2_52 = ["v2_50", "glib-sys/v2_52"]
 v2_54 = ["v2_52", "glib-sys/v2_54", "gobject-sys/v2_54"]
+dox = ["glib-sys/dox", "gobject-sys/dox"]
