--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,17 +1,17 @@
 [package]
-name = "pango-cairo"
+name = "pangocairo"
 documentation = "http://gtk-rs.org/docs/pango/"
 homepage = "http://gtk-rs.org/"
 authors = ["The Gtk-rs Project Developers"]
 keywords = ["pango", "cairo", "gtk-rs", "gnome"]
 readme = "README.md"
-version = "0.2.0"
+version = "0.2.1"
 description = "Rust bindings for the Pango library"
 repository = "https://github.com/gtk-rs/pango-cairo"
 license = "MIT"
 
 [features]
-dox = []
+dox = ["glib/dox", "pango/dox", "cairo-rs/dox"]
 
 [dependencies]
 libc = "0.2"
@@ -37,9 +37,9 @@ git = "https://github.com/gtk-rs/sys"
 version = "0.4.0"
 git = "https://github.com/gtk-rs/cairo"
 
-[dependencies.pango-cairo-sys]
-version = "0.4.0"
-path = "../sys//pango-cairo-sys"
+[dependencies.pangocairo-sys]
+version = "0.4.1"
+git = "https://github.com/gtk-rs/sys"
 
 [dependencies.pango]
 version = "0.2.0"
@@ -48,8 +48,3 @@ git = "https://github.com/gtk-rs/pango"
 [dependencies.cairo-rs]
 version = "0.2.0"
 git = "https://github.com/gtk-rs/cairo"
-
-[patch."https://github.com/gtk-rs/sys"]
-glib-sys = { path = "../sys/glib-sys" }
-pango-sys = { path = "../sys/pango-sys" }
-gobject-sys = { path = "../sys/gobject-sys" }
