--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,9 @@ git = "https://github.com/gtk-rs/sys"
 version = "0.5.0"
 git = "https://github.com/gtk-rs/sys"
 
+[dev-dependencies]
+tempdir = "0.3"
+
 [features]
 v2_34 = ["glib-sys/v2_34", "gobject-sys/v2_34"]
 v2_38 = ["v2_34", "glib-sys/v2_38", "gobject-sys/v2_38"]
