glib: Call cargo test from .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ addons:
     packages:
     - libgtk-3-dev
 script:
+  - cargo test
   - rustc --version
   - mkdir .cargo
   - echo 'paths = ["."]' > .cargo/config
