--- a/Gir.toml
+++ b/Gir.toml
@@ -6,6 +6,13 @@ min_cfg_version = "2.26"
 target_path = "."
 work_mode = "normal"
 
+generate = [
+    "GdkPixbuf.Colorspace",
+    "GdkPixbuf.InterpType",
+    "GdkPixbuf.PixbufAlphaMode",
+    "GdkPixbuf.PixbufError",
+]
+
 manual = [
     "GdkPixbuf.Pixbuf",
     "GdkPixbuf.PixbufAnimation",
