--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,3 +46,11 @@ git = "https://github.com/gtk-rs/sys"
 [dependencies.gobject-sys]
 version = "0.5.0"
 git = "https://github.com/gtk-rs/sys"
+
+[dependencies.gio-sys]
+version = "0.5.0"
+git = "https://github.com/gtk-rs/sys"
+
+[dependencies.gio]
+version = "0.3.0"
+git = "https://github.com/gtk-rs/gio"
