gio: Add new types and regen

--- a/Gir.toml
+++ b/Gir.toml
@@ -13,6 +13,7 @@ generate = [
     "Gio.AppInfoCreateFlags",
     "Gio.AppLaunchContext",
     "Gio.ApplicationFlags",
+    "Gio.AskPasswordFlags",
     "Gio.Cancellable",
     "Gio.FileCreateFlags",
     "Gio.FileInfo",
@@ -24,7 +25,10 @@ generate = [
     "Gio.MenuItem",
     "Gio.MenuLinkIter",
     "Gio.MenuModel",
+    "Gio.MountOperation",
+    "Gio.MountOperationResult",
     "Gio.NotificationPriority",
+    "Gio.PasswordSave",
     "Gio.Permission",
     "Gio.ResourceError",
     "Gio.ResourceLookupFlags",
