--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ addons:
     - libgtk-3-dev
 script:
   - rustc --version
-  - cargo test --features embed-lgpl-docs --jobs 1
+  - cargo test --features "embed-lgpl-docs v2_40" --jobs 1
   # catch any sneaked in lgpl docs
   - cargo build --features purge-lgpl-docs --jobs 1
   - git diff -R --exit-code
