--- a/Gir.toml
+++ b/Gir.toml
@@ -29,96 +29,16 @@ manual = [
 name = "GdkPixbuf.Pixbuf"
 status = "generate"
     [[object.function]]
-    name = "add_alpha"
-    #const self
-    ignore = true
-    [[object.function]]
-    name = "composite"
-    #const self
-    ignore = true
-    [[object.function]]
-    name = "composite_color"
-    #const self
-    ignore = true
-    [[object.function]]
-    name = "composite_color_simple"
-    #const self
-    ignore = true
-    [[object.function]]
-    name = "copy"
-    #const self
-    ignore = true
-    [[object.function]]
-    name = "copy_area"
-    #const self
-    ignore = true
-    [[object.function]]
-    name = "flip"
-    #const self
-    ignore = true
-    [[object.function]]
-    name = "get_bits_per_sample"
-    #as property: const self
-    ignore = true
-    [[object.function]]
-    name = "get_byte_length"
-    #const self
-    ignore = true
-    [[object.function]]
-    name = "get_colorspace"
-    #as property: const self
-    ignore = true
-    [[object.function]]
-    name = "get_has_alpha"
-    #as property: const self
-    ignore = true
-    [[object.function]]
-    name = "get_height"
-    #as property: const self
-    ignore = true
-    [[object.function]]
-    name = "get_n_channels"
-    #as property: const self
-    ignore = true
-    [[object.function]]
     name = "get_pixels"
-    #const self
+    #manual array without length
     ignore = true
     [[object.function]]
     name = "get_pixels_with_length"
-    #const self
-    ignore = true
-    [[object.function]]
-    name = "get_rowstride"
-    #as property: const self
-    ignore = true
-    [[object.function]]
-    name = "get_width"
-    #as property: const self
+    #manual as get_pixels
     ignore = true
     [[object.function]]
     name = "read_pixels"
-    #const self
-    ignore = true
-    [[object.function]]
-    name = "read_pixel_bytes"
-    #const self
-    ignore = true
-    [[object.function]]
-    name = "rotate_simple"
-    #const self
-    ignore = true
-    [[object.function]]
-    name = "saturate_and_pixelate"
-    #const self
-    ignore = true
-    [[object.function]]
-    name = "scale"
-    #const self
-    ignore = true
-    [[object.function]]
-    name = "scale_simple"
-    #const self
+    #unimplementable, use get_pixels instead
     ignore = true
     [[object.function]]
     name = "new_from_file"
