--- a/Gir.toml
+++ b/Gir.toml
@@ -21,7 +21,10 @@ manual = [
     "GdkPixbuf.PixbufAnimationIter",
     "GLib.Bytes",
     "GLib.Error",
+    "Gio.AsyncReadyCallback",
     "Gio.Cancellable",
+    "Gio.InputStream",
+    "Gio.OutputStream",
 ]
 
 [[object]]
