--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ v2_28 = ["gdk-pixbuf-sys/v2_28"]
 v2_30 = ["v2_28", "gdk-pixbuf-sys/v2_30"]
 v2_32 = ["v2_30", "gdk-pixbuf-sys/v2_32"]
 v2_36 = ["v2_32", "gdk-pixbuf-sys/v2_36"]
+v2_36_8 = ["v2_36", "gdk-pixbuf-sys/v2_36_8"]
 dox = ["glib/dox", "gdk-pixbuf-sys/dox"]
 purge-lgpl-docs = ["gtk-rs-lgpl-docs"]
 embed-lgpl-docs = ["gtk-rs-lgpl-docs"]
