gio: Add Socket bindings and related API

--- a/Gir.toml
+++ b/Gir.toml
@@ -42,6 +42,11 @@ generate = [
     "Gio.SettingsSchema",
     "Gio.SimpleActionGroup",
     "Gio.SimplePermission",
+    "Gio.SocketFamily",
+    "Gio.SocketType",
+    "Gio.SocketProtocol",
+    "Gio.SocketAddress",
+    "Gio.InetSocketAddress",
     "Gio.ThemedIcon",
     "Gio.TlsCertificate",
     "Gio.TlsCertificateFlags",
@@ -58,6 +63,8 @@ manual = [
     "GLib.Error",
     "GLib.Variant",
     "GLib.VariantType",
+    "GLib.IOCondition",
+    "GLib.Source",
     "GObject.Object",
 ]
 
@@ -329,6 +336,57 @@ status = "generate"
     [[object.property]]
     name = "output-stream"
     #readonly
+    ignore = true
+
+[[object]]
+name = "Gio.Socket"
+status = "generate"
+    [[object.function]]
+    name = "new_from_fd"
+    # has to use RawFd / SOCKET
+    ignore = true
+
+    [[object.function]]
+    name = "get_fd"
+    # has to use RawFd / SOCKET
+    ignore = true
+
+    [[object.property]]
+    name = "fd"
+    # has to use RawFd / SOCKET
+    ignore = true
+
+    [[object.function]]
+    pattern = "receive.*"
+    # &[u8]
+    ignore = true
+
+    [[object.function]]
+    pattern = "send.*"
+    # &[u8]
+    ignore = true
+
+[[object]]
+name = "Gio.InetAddress"
+status = "generate"
+    [[object.function]]
+    name = "equal"
+    # conflicting implementations
+    ignore = true
+
+    [[object.function]]
+    name = "to_string"
+    # conflicting implementations
+    ignore = true
+
+    [[object.function]]
+    name = "new_from_bytes"
+    # broken and needs some closer integration with the corresponding std types
+    ignore = true
+
+    [[object.function]]
+    name = "to_bytes"
+    # broken and needs some closer integration with the corresponding std types
     ignore = true
 
 [[object]]
