gio: Add SocketConnection and TCPConnection

--- a/Gir.toml
+++ b/Gir.toml
@@ -48,6 +48,8 @@ generate = [
     "Gio.SocketAddress",
     "Gio.InetSocketAddress",
     "Gio.SocketConnectable",
+    "Gio.SocketConnection",
+    "Gio.TcpConnection",
     "Gio.ResolverRecordType",
     "Gio.SrvTarget",
     "Gio.ThemedIcon",
