--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ addons:
 script:
   - rustc --version
   - cargo test --features "embed-lgpl-docs v2_40" --jobs 1
+  - cargo doc --features "dox"
   # catch any sneaked in lgpl docs
   - cargo build --features purge-lgpl-docs --jobs 1
   - git diff -R --exit-code
